vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/DocumentationTitleEmptySniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPn4KALfjuv6TQA+yUJOMZVs/axw4QD//IEL7ofnmaJGKl8KW8USnsJ8n+C8iOvEp/2fgxDDP
T6NszfPHYteQhqBPUFVYlmoc4/cRlSkJkwE7CwXZm5J/mQmJX5EMJNAlCjZQ53SYIsZWnN2W+5qn
OP7QGcsVJH5eY5lDS6yFJvLporfSLD3alAa2ieuWrTWd9WO4fuY/26eULTc9vY9Z8v6NM/PHWZlh
4oXjUGkrrIsVjDahX16nxnjTlJaotUQL3CwfMQZYWy6rwwptfFRLG1gYsiYRfcs3NNAWfKfFjoML
ZsTrUsd/yFz76Ohdx6bYe6z5K+qseHxTrTglUfPUIcsDIyRmorQwMockzjJj8z7KyVaB1qDvi5cZ
xC/BnS35r5bswYRETMImXLLrA7uxsi1rYP/LDsqsvdPuRg1w2etTSueGZEg0HwfZUGQjelgYOz8x
HzAa6pbMd6ED9VWK88gopcoGUj9VY8zUhm3V9tEm7Hg7BnxSGffSoHSrwx3yZNoTNeZ3msb9RIiL
gsq4G1BawT81679o6qJXSQVIPC+ocNr5xsgdOFDjx0xHO6g8OXHOzDZU1epcqSRtdHsDY6MdaKXV
06ONs/d0gUpFOea3TCBCv99EYHDbuwJC/ehyktrql9N5BVzCdvICr5L576r/RtiWMWocu1bJ91tV
0+xIJNqrOZCiBW4wdrFCcmssqkTaC7dS8DEJjYzr+tBwMjnxR0aEXKpccHz8/NE/jwXUatJ152DT
ktJPJpehNl0ciuOAtNYwzgfQxbqiJvIO+jmn64baGS+Uezpdwk/PXMxMb/JNKc7n13G0WVjjGxiS
dtp1k7Y71xpBuzBepMQksOYOK2wZFWGaFyRDOGGEoBfY1RT/B79UvFggVJWxc8MtNtT3C7NSR5s2
yJ9wQwK0BhC2EoXDNcWEViEy4d9egYLYtDzjtaNRZ1EE+M4FIRCDGa9/xqnuQkKGE6SCN0BRAI9z
ZugSOVzFoUFBZFecnfTeK0IBk2MW48Tjawr+iMq6E6j585znbhI2vKm9ccZ28QV3bD7QqMjVFYsM
vXj+7YuEdUuAlW/WGIV+f6jcjWFUrE3p4EYIO7m5kCbVvmIbyUThmYztq6MH++U94tiOVXvH8+yV
M5pkxY0G/tunJzW5+0RMQyK6iwauJ2XttYHnGPo0Z6cxud5UpWI4LBjXuiQ8juIVzDKka1ZEHkUp
m/64cpC6pPZ7l9fxAVEkYsxvvrJOl+ELRe1u9BoXmeTcTq6pOuzZPZLPwW9iRFZ9R1YaVR3qeczC
ZJrZthSJMfCP0guriCQTqNrqnICAE8bNRdtc4XGGVlhOOa7mgHx0LWOgDONDqUCz1WKg4ZAqe7GU
cgPYVSNq4gMv/l3dPRNGuU+sJg6UtFtc91ma5ajuklNG4WMMRt4EJ4iGsCq8ImGJ0XIi5aQ4PeS8
9H2kpA6E2LGHnbVq0qJpd0Rri9GUO0laaiERmfD++Taqb80K9Wia125XjabYuPC6y1icky+rBiui
V3VP8AYE4k1ryX2Me9qDCWy5kfWkGjd6VUobm26BKlglfp/s8AkylwTQHnuFofMvxcOXELzPn+Dj
JZdxj67a2I0=